--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -1,14 +1,143 @@
-<h1>Hello, world!</h1>
-<p>Welcome to your new single-page application, built with:</p>
-<ul>
-  <li><a href='https://get.asp.net/'>ASP.NET Core</a> and <a href='https://msdn.microsoft.com/en-us/library/67ef8sbd.aspx'>C#</a> for cross-platform server-side code</li>
-  <li><a href='https://angular.io/'>Angular</a> and <a href='http://www.typescriptlang.org/'>TypeScript</a> for client-side code</li>
-  <li><a href='http://getbootstrap.com/'>Bootstrap</a> for layout and styling</li>
-</ul>
-<p>To help you get started, we've also set up:</p>
-<ul>
-  <li><strong>Client-side navigation</strong>. For example, click <em>Counter</em> then <em>Back</em> to return here.</li>
-  <li><strong>Angular CLI integration</strong>. In development mode, there's no need to run <code>ng serve</code>. It runs in the background automatically, so your client-side resources are dynamically built on demand and the page refreshes when you modify any file.</li>
-  <li><strong>Efficient production builds</strong>. In production mode, development-time features are disabled, and your <code>dotnet publish</code> configuration automatically invokes <code>ng build</code> to produce minified, ahead-of-time compiled JavaScript files.</li>
-</ul>
-<p>The <code>ClientApp</code> subdirectory is a standard Angular CLI application. If you open a command prompt in that directory, you can run any <code>ng</code> command (e.g., <code>ng test</code>), or use <code>npm</code> to install extra packages into it.</p>
+<h1>Welcome!</h1>
+
+Angular Azure Services.
+<br />
+<br />
+<p>Full Stack Microservice Web Apps </p>
+<mat-tab-group>
+  <mat-tab label="Introduction">
+
+
+    <div id="col1" style="
+              color:#1d0b4f;
+              top:50px;
+              left:50px;
+              width:66%;
+              height:42%;
+
+              float:left;
+              margin:20px;
+              align-content:center">
+
+
+      <p>
+        For organisations needing more Web components delivered more quickly this a small free example showing how this might be achieved.
+        <br /><br />
+
+        This means any operations requiring, secure data gathering and sharing can be up and running in less time, and that this is achievable because the means of production is cloud based.
+        <br /><br />
+        As a practical example using the simple functionality here I am prepaired to demonstrate feature changes together with the build pipeline and live deployment to show how well any change management can meet your requirments.
+      </p>
+
+
+
+      Spring time 2020 and the first set of pipeline components are ready.<br />
+      John J Mulkearns
+      <br />
+      London and Canaria
+    </div>
+
+
+
+
+
+  </mat-tab>
+
+
+  <mat-tab label="Tech Overview">
+    <br />
+    <p>
+      This development of this domain is within a cloud based continuous integration, build and deployment pipeline*<br />
+
+      An ASP.NET Core API backend and an Angular CLI UI running on Azure linked to a public Github <code>repo</code>.
+      <br /><br />
+      <br />
+      * The CI-CD service is free from visualstudio.com as is this demo subdomain hosting from Azure<br />
+    </p>
+
+
+    <br />
+
+
+
+
+    <p>Whilst <code>source control and testing</code> are vital,  gathering needs, agile development and day to day concerns like developer standards and practices,  naming, branching and migrations etc  are intially addressed with short demo video links and info.<br />
+    <p>Further info  about previous public Web Apps and in-house LOB apps are being continually added</p>
+    <br />
+
+  </mat-tab>
+
+
+
+  <mat-tab label="Tech Drilldown">
+
+    ASP.NET Core 3.1 Restful Web API's using Entity Framework Core and ADO.NET with SQL Server Databases.*
+    <br />
+    <br />
+    <p>
+      Basic examples of standard client and server unit test runner / frameworks Karma, Jasmine MsTest are included.
+    </p>
+
+    Where possible I have written some fluent test code for C# MVC controllers and EF Core as well as for client side Typescript<br />
+    <br />
+    Where TDD meets Code First, some considerations.
+    <br />Renaming it feature driven lowers pressure.
+    <br />
+    Where GIT meets EF Migrations, some considerations.
+
+
+
+    <p>
+
+
+      Full Stack:<br />
+      <ul>
+        <li>
+          <strong>Continuous Integration and Delivery</strong> Hosted on <em>Azure</em> with <em>open source code</em> on Github.
+          <br />Pipeline tasks include multiple tests frameworks used server and client side
+        </li>
+        <li><strong>Essential CRUD to SQLDB via Angular Forms.</strong><br />Simple Transactions, searching, paging, filtering, sorting (all asynch)</li>
+        <li><strong>Security and Standards </strong>OAuth2 and OIDC, vendor-specific media types, API</li>
+        <li><strong>Performance </strong>Practicle load testing to lazy loading and from API Caching strategies to Query Analyser and Db indexing design</li>
+        <li><strong>API and documention</strong> Swagger</li>
+        <li><strong>UI </strong>Responsive Angular material and animations for mobile and desktop </li>
+        <li><strong>International</strong> Advanced i18n Frameworks with multilingual multicultural cognative services</li>
+
+      </ul>
+
+      <br />
+
+
+
+
+
+  </mat-tab>
+
+
+
+
+
+
+  <mat-tab label="Previous">
+
+    <br />
+    <ul>
+      Previous demos of Angular and .NET Core
+      <li><a href="https://bankbasics.azurewebsites.net/account" target="_blank">Bank Basics</a> Parts of basic financial banking app</li>
+      <li><a href="https://angular5.azurewebsites.net" target="_blank">Skills Test Basics</a> Parts of skills testing question bank</li>
+
+    </ul>
+
+
+    <p>
+      Preserved for History
+    </p>
+
+    Time machine (a peek at me in past from web archive project)
+    <br />
+    Webica.Net in 2003 <a href="https://web.archive.org/web/20030410044636/http://www.webica.net/" target="_blank">in a new window here</a>
+    or my first mobile app, nearly 5 years before the first IPhone <a href="https://web.archive.org/web/20030422114336/http://www.keycost.com/" target="_blank"> Keycost.com </a>
+    <p>If your up for some fleeting whacky dev bits n pieces there are a few  <a href="https://www.youtube.com/channel/UCwm5-mwOBY8MmPnJahI08tw" target="_blank">here on youtube</a></p>
+  </mat-tab>
+
+</mat-tab-group>
