--- a/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,44 +1,146 @@
+
 <header>
-  <nav
-    class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3"
-  >
+  <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
     <div class="container">
-      <a class="navbar-brand" [routerLink]="['/']">CanariasCorvid19</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target=".navbar-collapse"
-        aria-label="Toggle navigation"
-        [attr.aria-expanded]="isExpanded"
-        (click)="toggle()"
-      >
+      <a class="navbar-brand" [routerLink]="['/']">CanariasCascade</a>
+      <button class="navbar-toggler"
+              type="button"
+              data-toggle="collapse"
+              data-target=".navbar-collapse"
+              aria-label="Toggle navigation"
+              [attr.aria-expanded]="isExpanded"
+              (click)="toggle()">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div
-        class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse"
-        [ngClass]="{ show: isExpanded }"
-      >
+      <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse"
+           [ngClass]="{ show: isExpanded }">
         <ul class="navbar-nav flex-grow">
-          <li
-            class="nav-item"
-            [routerLinkActive]="['link-active']"
-            [routerLinkActiveOptions]="{ exact: true }"
-          >
+          <li class="nav-item"
+              [routerLinkActive]="['link-active']"
+              [routerLinkActiveOptions]="{ exact: true }">
             <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/counter']"
-              >Counter</a
-            >
+            <a class="nav-link text-dark" [routerLink]="['/counter']">Counter</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/fetch-data']"
-              >Fetch data</a
-            >
+            <a class="nav-link text-dark" [routerLink]="['/fetch-data']">Fetch data</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
 </header>
+
+
+
+
+
+
+<!--
+<div class='main-nav'>
+  <div class='navbar navbar-inverse'>
+    <div class='navbar-header'>
+      <button type='button' class='navbar-toggle'
+              data-toggle='collapse'
+              data-target='.navbar-collapse' [attr.aria-expanded]='isExpanded'
+              (click)='toggle()'>
+        <span class='sr-only'>Toggle navigation</span>
+        <span class='icon-bar'></span>
+        <span class='icon-bar'></span>
+        <span class='icon-bar'></span>
+      </button>
+      <a class='navbar-brand' [routerLink]='["/"]'><img src="assets/3A.png" height="32" /></a>
+    </div>
+    <div class='clearfix'></div>
+    <div class='navbar-collapse collapse' [ngClass]='{ "in": isExpanded }'>
+      <ul class='nav navbar-nav'>
+        <li [routerLinkActive]='["link-active"]' [routerLinkActiveOptions]='{ exact: true }'>
+          <a [routerLink]='["/"]' (click)='collapse()'>
+            <span class='glyphicon glyphicon-home'></span> Home
+          </a>
+        </li>
+        <li [routerLinkActive]='["link-active"]'>
+          <a [routerLink]='["/counter"]' (click)='collapse()'>
+            <span class='glyphicon glyphicon-education'></span> Counter
+          </a>
+        </li>
+
+        <li [routerLinkActive]='["link-active"]'>
+          <a [routerLink]='["/account"]' (click)='collapse()'>
+            <span class='glyphicon glyphicon-education'></span> Bank
+          </a>
+        </li>
+
+        <li [routerLinkActive]='["link-active"]'>
+          <a [routerLink]='["/graphs"]' (click)='collapse()'>
+            <span class='glyphicon glyphicon-th-list'></span> Graph data
+          </a>
+        </li>
+
+
+        <li [routerLinkActive]='["link-active"]'>
+          <a [routerLink]='["/fetch-data"]' (click)='collapse()'>
+            <span class='glyphicon glyphicon-th-list'></span> Fetch data
+          </a>
+        </li>
+
+        <li [routerLinkActive]="['link-active']">
+          <a [routerLink]='["/fetch-employee"]' (click)='collapse()'>
+            <span class='glyphicon glyphicon-th-list'></span>Employees
+          </a>
+        </li>
+        <li [routerLinkActive]="['link-active']">
+          <a [routerLink]="['/git']" (click)='toggle()'>
+            <span class='glyphicon glyphicon-unchecked'></span> Github+
+          </a>
+        </li>
+
+
+        <li [routerLinkActive]="['link-active']">
+          <a [routerLink]="['/swagger']" (click)='toggle()'>
+            <span class='glyphicon glyphicon-unchecked'></span>API's'
+          </a>
+        </li>
+
+        <li [routerLinkActive]="['link-active']">
+          <a [routerLink]="['/i18n']" (click)='toggle()'>
+            <span class='glyphicon glyphicon-unchecked'></span> I18n
+          </a>
+        </li>
+
+        <li [routerLinkActive]="['link-active']">
+          <a [routerLink]="['/cicd']" (click)='toggle()'>
+            <span class='glyphicon glyphicon-unchecked'></span>  CI/CD
+          </a>
+        </li>
+        <li [routerLinkActive]="['link-active']">
+          <a [routerLink]="['/tdd']" (click)='toggle()'>
+            <span class='glyphicon glyphicon-unchecked'></span> TDD
+          </a>
+        </li>
+        <li [routerLinkActive]="['link-active']">
+          <a [routerLink]="['/safe']" (click)='toggle()'>
+            <span class='glyphicon glyphicon-unchecked'></span> Securing apps
+          </a>
+        </li>
+
+        <li [routerLinkActive]="['link-active']">
+          <a [routerLink]="['/git']" (click)='toggle()'>
+            <span class='glyphicon glyphicon-unchecked'></span> Performance
+          </a>
+        </li>
+
+      <li [routerLinkActive]="['link-active']">
+          <a [routerLink]="['/people']" (click)='toggle()'>
+            <span class='glyphicon glyphicon-unchecked'></span> People
+          </a>
+        </li>
+
+
+      </ul>
+    </div>
+  </div>
+</div>
+
+-->
