--- a/ClientApp/src/app/nav-menu/nav-menu.component.css
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.css
@@ -6,7 +6,7 @@ li .glyphicon {
 li.link-active a,
 li.link-active a:hover,
 li.link-active a:focus {
-  background-color: #143c5e;
+  background-color:chocolate;
   color: white;
 }
 
